<resources>
    <string name="app_name" translatable="false">Smart Sudoku</string>
    <string name="button_text_sudoku_play">Play Sudoku</string>
    <string name="button_text_sudoku_solve">Solve Sudoku</string>

    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_easy_upper">EASY</string>
    <string name="difficulty_medium_upper">MEDIUM</string>
    <string name="difficulty_hard_upper">HARD</string>

    <string name="activity_sudoku_play_elapsed_time">Elapsed time:</string>
    <string name="activity_sudoku_play_difficulty">Difficulty:</string>

    <string name="difficulty_dialog_text">Please select the difficulty</string>

    <string name="settings_dialog_name">SETTINGS</string>
    <string name="settings_dialog_faulty">Show faulty cells</string>
    <string name="settings_dialog_highlight">Highlight relevant cells</string>
    <string name="new_game_button_text">New Game</string>
    <string name="restart_button_text">Restart</string>
    <string name="dialog_sudoku_play_restart">Do you really want to restart the game and discard your progress?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="dialog_sudoku_play_gamewon_congrats">Congratulations! You have solved the Sudoku!</string>
    <string name="dialog_sudoku_play_gamewon_newgame">Do you want to start a new game?</string>
    <string name="dialog_sudoku_play_sudokuwrong">The sudoku is incorrect!</string>
    <string name="Close">Close</string>
    <string name="dialog_sudoku_play_gamewon_timeneeded">Time needed: </string>
    <string name="dialog_sudoku_play_gamewon_difficulty">Difficulty: </string>
    <string name="activity_sudoku_solve_solve">Solve Sudoku</string>
    <string name="activity_sudoku_solve_resetSolution">Reset Solution</string>
    <string name="activity_sudoku_solve_reset">Reset</string>
    <string name="dialog_mainmenu_settings_language">App language</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_english" translatable="false">English</string>
    <string name="dialog_info_version">App version:</string>
    <string name="dialog_info_contact">Contact:</string>
    <string name="dialog_info_opensource">This is an open source project.</string>
    <string name="dialog_info_weblink"><a href="https://github.com/sebmueller91/Sudoku/">View source code on GitHub</a></string>
    <string name="settings_dialog_deletenotes">Delete note number in case of conflict</string>
</resources>