<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    style="@style/dialog_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_dialog_name"
        android:layout_margin="10dp"/>

    <Switch
        android:id="@+id/showFaultyCellsSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_dialog_faulty"
        android:layout_marginHorizontal="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <Switch
        android:id="@+id/highlightCellsSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_dialog_highlight"
        android:layout_marginHorizontal="10dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <Switch
        android:id="@+id/deleteNotesSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_dialog_deletenotes"
        android:layout_marginHorizontal="10dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
</LinearLayout>
