<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    style="@style/dialog_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/dialog_sudoku_play_gamewon_congrats"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/dialog_sudoku_play_gamewon_difficulty"/>
        <TextView
            android:id="@+id/dialogGameWon_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>
    <Space
        android:layout_width="10dp"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/dialog_sudoku_play_gamewon_timeneeded"/>
        <TextView
            android:id="@+id/dialogGameWon_timeneeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>
    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_sudoku_play_gamewon_newgame"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_gamewon_yes"
            style="@style/dialog_button_style"
            android:text="@string/Yes"
            android:layout_weight="1" />
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_gamewon_no"
            style="@style/dialog_button_style"
            android:text="@string/No"
            android:layout_weight="1"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>
