<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    style="@style/dialog_style">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_sudoku_play_restart"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_restart_yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button"
            android:clickable="true"
            android:text="@string/Yes"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textStyle="bold" />
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_restart_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button"
            android:clickable="true"
            android:text="@string/No"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textStyle="bold" />
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>
