<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/sudokuLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonsLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridLayout
            android:id="@+id/SudokuGridLayout"
            android:layout_width="405dp"
            android:layout_height="405dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:columnCount="9"
            android:orientation="horizontal"
            android:rowCount="9"
            android:stateListAnimator="@null"
            app:layout_constraintDimensionRatio="1:1"
            tools:context=".GridXMLActivity"></GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="9"
            android:rowCount="1">

            <Button
                android:id="@+id/userButton1"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="1"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton2"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="2"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton3"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="3"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton4"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="4"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton5"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="4"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="5"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton6"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="5"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="6"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton7"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="6"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="7"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton8"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="7"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="8"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/userButton9"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="8"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/input_button"
                android:stateListAnimator="@null"
                android:text="9"
                android:textColor="#3063f7"
                android:textSize="30sp"
                android:textStyle="bold" />
        </GridLayout>

        <ImageButton
            android:id="@+id/clearCellButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/ic_emptycell"
            android:orientation="horizontal" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sudokuLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/solveSudokuButton"
            style="@style/menu_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal"
            android:text="@string/activity_sudoku_solve_solve"/>


        <Button
            android:id="@+id/resetSolutionButton"
            style="@style/menu_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal"
            android:text="@string/activity_sudoku_solve_resetSolution" />

        <Button
            android:id="@+id/resetButton"
            style="@style/menu_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal"
            android:text="@string/activity_sudoku_solve_reset" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>